// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage should render component with custom title 1`] = `
<img
  alt="Product Img"
  className="productImg undefined"
  src="https://hola.jpg"
/>
`;

exports[`ProductImage should render default title if no prop is passed 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product Img"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
